--- a/config/cable.yml
+++ b/config/cable.yml
@@ -7,5 +7,5 @@ test:
 
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
-  channel_prefix: plivo_api_production
+  url: redis://redistogo:db2287bd767c06bb3cfab474ff6a6e71@scat.redistogo.com:10581/
+  # channel_prefix: plivo_api_production
